--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Tic-Tac-Toe</title>
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <!--<script src="script.js" defer></script>--->
+    <script src="script.js" defer></script>
   </head>
   <body>
     <header class="header">
